@@ -29,21 +29,50 @@
   <sect2 role="content">
   <title>Starting KDE4 from the command prompt</title>
 
- <para>To start <application>KDE4</application> from the command prompt, you
- first need to modify your <filename>.xinitrc</filename> file:</para>
+    <para>
+      You can start <application>KDE4</application> from runlevel 3, using
+      <xref linkend="xinit"/>, or from runlevel 5, using a Display Manager,
+      such as <xref linkend="sddm"/>.
+    </para>
 
-<screen><userinput>cat &gt; ~/.xinitrc &lt;&lt; EOF
-<literal># Begin .xinitrc
+    <para>
+      To start <application>KDE4</application> using <xref linkend="xinit"/>,
+      run the following commands:
+    </para>
 
-exec ck-launch-session dbus-launch --exit-with-session startkde
+<screen><userinput>cat &gt; ~/.xinitrc &lt;&lt; "EOF"
+<literal>ck-launch-session dbus-launch --exit-with-session startkde</literal>
+EOF
 
-# End .xinitrc</literal>
-EOF</userinput></screen>
+startx</userinput></screen>
 
-    <note><para>If you are not using <application>ConsoleKit</application>, remove
-    <userinput>ck-launch-session</userinput>.</para></note>
+    <para>
+      The X session starts on the first unused virtual terminal, normally vt7.
+      You can switch to a vtn (n=1, 2, ...) simultaneously pressing the keys
+      Ctrl-Alt-Fn. To switch back to the X session, normally started at vt7,
+      use Ctrl-Alt-F7. If started from vt1 (the usual case), you will see many
+      messages there, including X starting messages, applications automatically
+      started with the session, and eventually, some warning and error
+      messages. You may prefer to redirect those messages to a log file, which
+      not only will keep vt1 uncluttered, but also can be used for debug
+      purposes. This can be done starting X with:
+    </para>
 
-    <para>You can now start KDE4 using the <command>startx</command> command.</para>
+    <screen><userinput>startx &amp;&gt; ~/.x-session-errors</userinput></screen>
+
+    <para>
+      You may wish to drop consolekit and/or dbus-launch, e.g., just using
+      startlxde in .~/.xinitrc, but some functionalities such as mount/umount
+      file systems from a file manager will not be possible, or the reboot
+      option will be absent or not functioning, between other problems.
+    </para>
+
+    <para>
+      Because X is (normally) on vt7, when you shutdown the vt is switched back
+      to that one where the command starting it was executed. In this case, if
+      you wish to see the shutdown messages, simultaneously press keys Alt-F7,
+      because normally those messages appear on the vt where X was running.
+    </para>
 
     </sect2>
 
