@@ -84,8 +84,9 @@ unset i</userinput></screen>
     <title>Starting LXQt</title>
 
     <para>
-      If an optional Display Manager have been installed and you wish to use it,
-      skip the following steps.
+      You can start <application>LXQt</application> from runlevel 3, using
+      <xref linkend="xinit"/>, or from runlevel 5, using a Display Manager,
+      such as <xref linkend="sddm"/>.
     </para>
 
     <para>
@@ -93,11 +94,39 @@ unset i</userinput></screen>
       run the following commands:
     </para>
 
-<screen><userinput>cat &gt;&gt; ~/.xinitrc &lt;&lt; "EOF"
-ck-launch-session startlxqt
+<screen><userinput>cat &gt; ~/.xinitrc &lt;&lt; "EOF"
+<literal>ck-launch-session dbus-launch --exit-with-session startlxqt</literal>
 EOF
 
 startx</userinput></screen>
+
+    <para>
+      The X session starts on the first unused virtual terminal, normally vt7.
+      You can switch to a vtn (n=1, 2, ...) simultaneously pressing the keys
+      Ctrl-Alt-Fn. To switch back to the X session, normally started at vt7,
+      use Ctrl-Alt-F7. If started from vt1 (the usual case), you will see many
+      messages there, including X starting messages, applications automatically
+      started with the session, and eventually, some warning and error
+      messages. You may prefer to redirect those messages to a log file, which
+      not only will keep vt1 uncluttered, but also can be used for debug
+      purposes. This can be done starting X with:
+    </para>
+
+    <screen><userinput>startx &amp;&gt; ~/.x-session-errors</userinput></screen>
+
+    <para>
+      You may wish to drop consolekit and/or dbus-launch, e.g., just using
+      startlxde in .~/.xinitrc, but some functionalities such as mount/umount
+      file systems from a file manager will not be possible, or the reboot
+      option will be absent or not functioning, between other problems.
+    </para>
+
+    <para>
+      Because X is (normally) on vt7, when you shutdown the vt is switched back
+      to that one where the command starting it was executed. In this case, if
+      you wish to see the shutdown messages, simultaneously press keys Alt-F7,
+      because normally those messages appear on the vt where X was running.
+    </para>
 
   </sect2>
 
