@@ -72,6 +72,13 @@
   <sect2 role="installation">
     <title>Installation of xinit</title>
 
+    <para>First, modify <command>startx</command>, hence the X session starts on
+    the first unused virtual terminal, which normally is vt7:</para>
+    <!--Apparently, this should not be done for systemd systems-->
+
+<screen><userinput>sed -e '/$serverargs $vtarg/ s/serverargs/: #&amp;/' \
+    -i startx.cpp</userinput></screen>
+
     <para>Install <application>xinit</application> by running the
     following commands:</para>
 
