@@ -86,8 +86,8 @@
 
     <bridgehead renderas="sect4">Recommended</bridgehead>
     <para role="recommended">
-      <xref linkend="desktop-file-utils"/> 
-      <xref linkend="shared-mime-info"/>, and
+      <xref linkend="desktop-file-utils"/>,
+      <xref linkend="shared-mime-info"/> and
       <xref linkend="polkit-gnome"/>
     </para>
 
@@ -149,15 +149,15 @@ make</userinput></screen>
       <xref linkend="hicolor-icon-theme"/> and
       <xref linkend="openssh"/>
     </para>
-
+<!--
     <para>
       To launch <application>Xfce4</application> use the command
       <command>startxfce4</command>. If you have <xref linkend="consolekit"/>
-      installed, use <command>startxfce4 --with-ck-launch</command>.
+      installed, use <command>startxfce4 -\-with-ck-launch</command>.
       <application>ConsoleKit</application> is required to perform any
       task that requires administrative access, including shut down
       and reboot.
-    </para>
+    </para>-->
 
     <para>
       When building an <application>Xfce4</application> package, some
@@ -173,6 +173,56 @@ make</userinput></screen>
 
 <screen role="root"><userinput>update-desktop-database &amp;&amp;
 update-mime-database</userinput></screen>
+  </sect2>
+
+  <sect2 role="starting">
+    <title>Starting Xfce4</title>
+
+    <para>
+      You can start <application>Xfce4</application> from runlevel 3, using
+      <xref linkend="xinit"/>, or from runlevel 5, using a Display Manager,
+      such as <xref linkend="sddm"/>.
+    </para>
+
+    <para>
+      To start <application>Xfce4</application> using <xref linkend="xinit"/>,
+      run the following commands:
+    </para>
+
+<screen><userinput>cat &gt; ~/.xinitrc &lt;&lt; "EOF"
+<literal>ck-launch-session dbus-launch --exit-with-session startxfce4</literal>
+EOF
+
+startx</userinput></screen>
+
+    <para>
+      The X session starts on the first unused virtual terminal, normally vt7.
+      You can switch to a vtn (n=1, 2, ...) simultaneously pressing the keys
+      Ctrl-Alt-Fn. To switch back to the X session, normally started at vt7,
+      use Ctrl-Alt-F7. If started from vt1 (the usual case), you will see many
+      messages there, including X starting messages, applications automatically
+      started with the session, and eventually, some warning and error
+      messages. You may prefer to redirect those messages to a log file, which
+      not only will keep vt1 uncluttered, but also can be used for debug
+      purposes. This can be done starting X with:
+    </para>
+
+    <screen><userinput>startx &amp;&gt; ~/.x-session-errors</userinput></screen>
+
+    <para>
+      You may wish to drop consolekit and/or dbus-launch, e.g., just using
+      startlxde in .~/.xinitrc, but some functionalities such as mount/umount
+      file systems from a file manager will not be possible, or the reboot
+      option will be absent or not functioning, between other problems.
+    </para>
+
+    <para>
+      Because X is (normally) on vt7, when you shutdown the vt is switched back
+      to that one where the command starting it was executed. In this case, if
+      you wish to see the shutdown messages, simultaneously press keys Alt-F7,
+      because normally those messages appear on the vt where X was running.
+    </para>
+
   </sect2>
 
   <sect2 role="content">
