@@ -1,3 +1,6 @@
+2015-09-24 Fernando de Oliveira <famobr at yahoo.com.br>
+   * Remove sddm fixes for upowerd.
+
 2015-08-23 Fernando de Oliveira <famobr at yahoo.com.br>
    * Fix sddm for upowerd stop.
 
